fix issue with message details not showing aligned or wrapping in undesired locations by changing layout direction to column

--- a/src/ServicePulse.Host/vue/src/components/monitoring/endpoint.css
+++ b/src/ServicePulse.Host/vue/src/components/monitoring/endpoint.css
@@ -147,8 +147,14 @@ h1 .endpoint-status i.fa-envelope {
 .endpoint-name,
 .endpoint-name > div {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   flex-wrap: wrap;
+  justify-content: center;
+}
+
+.endpoint-name {
+  gap: 0.25em;
 }
 
 /* RESPONSIVE TWEAKS */
